--- a/js/index.html
+++ b/js/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-aqua" onload="load()">
+<body class="bg-aqua">
 
 <main class="container">
 
