--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,8 @@
 <body class="bg-aqua">
 
 <main class="container">
+	<p id="demo"></p>	
+	<button onclick="stopFunction()">Stop time</button>
 
 	<h1>HTML Ipsum Presents</h1>
 
